--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "minimal-blog",
+  "name": "Katarzyna Kmiotek",
   "description": "Typography driven, feature-rich blogging theme with minimal aesthetics. Includes tags/categories support and extensive features for code blocks such as live preview, line numbers, and line highlighting.",
   "version": "1.2.0",
-  "author": "LekoArts <hello@lekoarts.de>",
+  "author": "Kat Kmiotek",
   "license": "MIT",
   "starter-name": "gatsby-starter-minimal-blog",
   "scripts": {
