--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-preact": "^4.0.13",
     "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.10",
+    "preact": "^10.5.3",
+    "preact-render-to-string": "^5.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
