--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:cypress": "cross-env CYPRESS_SUPPORT=y yarn build",
     "start": "gatsby develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "dependencies": {
     "@lekoarts/gatsby-theme-minimal-blog": "^2.4.0",
@@ -24,6 +25,7 @@
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-preact": "^4.0.13",
     "gatsby-plugin-preconnect": "^1.1.54",
+    "gatsby-plugin-preload-fonts": "^1.2.26",
     "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.10",
     "preact": "^10.5.3",
